[package]
name = "tracker"
version = "0.1.0"
edition = "2018"

[lib]
name = "netfunc"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
itertools = "0.10.*"
aether_lib = { git = "https://github.com/Prototype-Aether/Aether-Lib.git" }
dotenv = "0.15.0"